code refactoring HTML & CSS, corrected-spacing issues in sections

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
 body {
   font-family: "Poppins";
   background-color: rgba(0,0,0,.05);
+  font-size: 15.25px;
 }
 
 h1 {
@@ -38,9 +39,6 @@ header > div {
     align-items: center;
     border-bottom: 1px solid lightgray;
   }
-header > span {
-    text-align: start;
-}
 
   nav {
     width: 600px;
@@ -69,13 +67,17 @@ header > span {
     border: none;
     text-decoration: none;
   }
-    .btn {
-    color: white;
+  .red-btn-section-two {
+      background: #FB3B49;
+      color: white;
+      text-decoration: none;
+  }
+  
+.black-btn {
+    color: black;
+    text-decoration: none;
 }
 
-  #npm-tools h3 {
-      color: #ED1C24
-  }
   .register {
       width: 280px;
       display: flex;
@@ -104,9 +106,83 @@ header > span {
   }
 
   .search-bar {
-      padding-left: 32.55px;
+    color:  rgba(0,0,0,.5);
+    padding-left: 32.55px;
+  }
+  .search-bar input {
+      color:  rgba(0,0,0,.5);
+  }
 
+  #npm-general {
+      height: 600px;
+      background-color:  rgba(232,217,217,.3);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+  }
 
+  .general-article {
+        width: 400px;
+        margin-bottom: 50px;
+  }
+
+  .centered-article a {
+    padding: 11.53px 40.644px;
+    margin-right: 30px;
+    border: none;
+    box-shadow: 8px 8px 0 rgba(251,59,73,.2);
+  }
+
+  #npm-introduction {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      margin: 153.75px;
+      
+  }
+  #npm-introduction h2 {
+      background-color: rgba(255,204,53,.4);
+      transform: skew(9deg,0deg);
+      font-style: italic;
+  }
+  .article-section-two {
+      width: 750px;
+  }
+
+  #npm-tools {
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      margin-left: 20px;
+  }
+  #npm-tools h3 {
+      color: #ED1C24;
+  }
+
+  .description {
+      width: 210px;
+      margin-left: 50px;
+  }
+  
+  .tool-image {
+      width: 40px;
+  }
+
+  .org {
+      margin: 91.25px auto; 
+      text-align: center;
+  }
+
+    .org a {
+        background-color: black;
+        color: white;
+        box-shadow: 8px 8px 0 rgba(128,83,35,.2);
+        text-decoration: none;
+        padding: 17px 100px;
+    }
 
 
 
